course_files/basic_exercise/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      restartPolicy: Always
      volumes:
      - name: pv-storage
        persistentVolumeClaim:
          claimName: pvc-claim-001
      - name: config-volume
        configMap:
          name: nginx-config
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: pv-storage
          mountPath: /var/www/html/
        - name: config-volume
          mountPath: /etc/nginx/conf.d/
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
            httpHeaders:
            - name: Custom-Header
              value: livenessProbe
          initialDelaySeconds: 15
          periodSeconds: 3
